{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 18,
  "lineage": "0f95c901-c9d6-de7b-b2d6-8164b5df54d1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devopsshack_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:616919332376:internet-gateway/igw-0c14247d1e06d6054",
            "id": "igw-0c14247d1e06d6054",
            "owner_id": "616919332376",
            "region": "ap-south-2",
            "tags": {
              "Name": "devopsshack-igw"
            },
            "tags_all": {
              "Name": "devopsshack-igw"
            },
            "vpc_id": "vpc-034f54a820a7eb65b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devopsshack_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:616919332376:route-table/rtb-07878839d242591ef",
            "id": "rtb-07878839d242591ef",
            "owner_id": "616919332376",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c14247d1e06d6054",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devopsshack-route-table"
            },
            "tags_all": {
              "Name": "devopsshack-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-034f54a820a7eb65b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616919332376",
            "id": "rtb-07878839d242591ef",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.devopsshack_igw",
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devopsshack_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc3e1002bdbb8e14",
            "region": "ap-south-2",
            "route_table_id": "rtb-07878839d242591ef",
            "subnet_id": "subnet-0af5ad50659c606e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.devopsshack_igw",
            "aws_route_table.devopsshack_route_table",
            "aws_subnet.devopsshack_subnet",
            "aws_vpc.devopsshack_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f2b49c325a6de79",
            "region": "ap-south-2",
            "route_table_id": "rtb-07878839d242591ef",
            "subnet_id": "subnet-0453b9978233cccff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.devopsshack_igw",
            "aws_route_table.devopsshack_route_table",
            "aws_subnet.devopsshack_subnet",
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devopsshack_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:616919332376:security-group/sg-01029781bd49b584a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01029781bd49b584a",
            "ingress": [],
            "name": "terraform-20260201144143902500000001",
            "name_prefix": "terraform-",
            "owner_id": "616919332376",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devopsshack-cluster-sg"
            },
            "tags_all": {
              "Name": "devopsshack-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-034f54a820a7eb65b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616919332376",
            "id": "sg-01029781bd49b584a",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devopsshack_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:616919332376:security-group/sg-0ae8b336e986577e5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae8b336e986577e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20260201144143904600000002",
            "name_prefix": "terraform-",
            "owner_id": "616919332376",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devopsshack-node-sg"
            },
            "tags_all": {
              "Name": "devopsshack-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-034f54a820a7eb65b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616919332376",
            "id": "sg-0ae8b336e986577e5",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devopsshack_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:616919332376:subnet/subnet-0af5ad50659c606e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af5ad50659c606e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616919332376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "devopsshack-subnet-0"
            },
            "tags_all": {
              "Name": "devopsshack-subnet-0"
            },
            "vpc_id": "vpc-034f54a820a7eb65b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616919332376",
            "id": "subnet-0af5ad50659c606e9",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:616919332376:subnet/subnet-0453b9978233cccff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0453b9978233cccff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616919332376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "devopsshack-subnet-1"
            },
            "tags_all": {
              "Name": "devopsshack-subnet-1"
            },
            "vpc_id": "vpc-034f54a820a7eb65b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616919332376",
            "id": "subnet-0453b9978233cccff",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devopsshack_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:616919332376:vpc/vpc-034f54a820a7eb65b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b433e7e098a4180c",
            "default_route_table_id": "rtb-0b6f381e29845a05a",
            "default_security_group_id": "sg-023e33a41bbaf8f22",
            "dhcp_options_id": "dopt-0ecb9b6a7ac9908f7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-034f54a820a7eb65b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b6f381e29845a05a",
            "owner_id": "616919332376",
            "region": "ap-south-2",
            "tags": {
              "Name": "devopsshack-vpc"
            },
            "tags_all": {
              "Name": "devopsshack-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616919332376",
            "id": "vpc-034f54a820a7eb65b",
            "region": "ap-south-2"
          }
        }
      ]
    }
  ]
}